--- a/style.css
+++ b/style.css
@@ -23,13 +23,13 @@ b{font-family: arial; }
 
 .fennec-mobile-nav .navbar-nav {  overflow-y: auto;  height: 428px;}
 .fennec-nav .navbar .navbar-nav .nav-item {  position: relative;  padding: 0;}
-.fennec-nav .navbar .navbar-nav .nav-item a { color: #f58634;    text-transform: uppercase;    padding: 20px 10px;    position: relative;    z-index: 1;    margin: 0;    font-size: 15px;    font-weight: 700;    transition: 0.5s;}
+.fennec-nav .navbar .navbar-nav .nav-item a { color: #f58634;    text-transform: uppercase;    padding: 20px 10px;    position: relative;    z-index: 1;    margin: 0;    font-size: 15px;    font-weight: 700;    transition: 0.5s; letter-spacing: 1px;}
 
 .fennec-nav .navbar .navbar-nav .nav-item a:hover {color: #f58634;}
 .fennec-nav .navbar .navbar-nav .nav-item a:hover::before, .fennec-nav .navbar .navbar-nav .nav-item a:focus::before, .fennec-nav .navbar .navbar-nav .nav-item a.active::before {  opacity: 1;  visibility: visible;}
 .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu {  -webkit-box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);          box-shadow: 0px 0px 15px 0px rgba(0, 0, 0, 0.1);   background: #255dba;  position: absolute;  border: none;  top: 80px;  left: 0;  width: 280px;  z-index: 99;  display: block;  opacity: 0;  visibility: hidden;  border-radius: 0;  -webkit-transition: all 0.3s ease-in-out;  transition: all 0.3s ease-in-out; }
 .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li{background-position: 0% 50%;  padding-left: 12px;}
-.fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a {  text-transform: capitalize;  padding: 5px 0px;  display: block;  color: #fff;  margin-top: 6px;  font-size: 15px;  font-weight: 600;}
+.fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a {  text-transform: capitalize;  padding: 5px 0px;  display: block;  color: #fff;  margin-top: 6px;  font-size: 15px;  font-weight: 600; letter-spacing: 1.5px;}
 .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a::before {  display: none;}
 .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a:hover, .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a:focus, .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a.active {  color: #fff; }
 .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a:hover::after, .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a:focus::after, .fennec-nav .navbar .navbar-nav .nav-item .dropdown-menu li a.active::after {  opacity: 1;  visibility: visible;  -webkit-transform: scale(1);          transform: scale(1);}
