--- a/style.css
+++ b/style.css
@@ -138,12 +138,6 @@ color {    color: #0c599f;}
 .hero-slider-4{background: url(img/slider-5.png); height: 600px; background-attachment: fixed; background-size: cover;}
 .hero-slider-5{background: url(img/slider-6.png); height: 600px; background-attachment: fixed; background-size: cover;}
 
-.slider-caption span{font-size: 50px; font-family: 'Oswald', sans-serif;   line-height: 1.1; margin-bottom: 20px;    font-weight: 900;}
-.slider-caption h1{font-size: 50px; font-family: 'Oswald', sans-serif;   line-height: 1.1; margin-bottom: 20px;    font-weight: 900;}
-.slider-caption p{     font-size: 25px;    line-height: 1.5;    font-weight: 700;    color: #ffffff;   margin-bottom: 34px;    }
-.slider-caption {    margin: 0px auto; top: 30%;}
-color.orange{color: #ff8042;}
-color
 .green{color: #82c85c;}
 /*Project*/
 .project-section-two{	position: relative;	background-color: #f2f3f5;	padding: 120px 0 0;overflow:hidden;}
@@ -340,7 +334,7 @@ p.text-block {    color: #000;}
 .map2_wrapper #map {    width: 100%;    height: 600px;	padding:0;	-webkit-border-radius: 0;   -moz-border-radius: 0;    border-radius: 0; }
 .contact_field_wrapper{	width: 100%;    background-image: url(img/cntct_bg.jpg);   background-position: center 0;    background-size: cover;    position: relative;     padding: 40px 100px 40px 100px;}
 .tb_es_btn_wrapper  button{ outline: none;   width: 100%;    height: auto;     background: #df8826;   text-align: center;    cursor: pointer;    font-size: 16px;    color: #fff;    border: 1px solid transparent;    line-height: 43px;    text-transform: capitalize;    -webkit-transition: all 0.6s;    -o-transition: all 0.6s;    -ms-transition: all 0.6s;    -moz-transition: all 0.6s;    transition: all 0.6s;}
-.tb_es_btn_wrapper  button:hover {    background-color: #2957a4;    color: #fff; border: 0px;	border: 1px solid  #df8826   -webkit-transition: all 0.6s;    -o-transition: all 0.6s;    -ms-transition: all 0.6s;    -moz-transition: all 0.6s;    transition: all 0.6s;  outline: none;}
+.tb_es_btn_wrapper  button:hover {    background-color: #2957a4;    color: #fff; border: 0px;	border: 1px solid  #df8826 ;  -webkit-transition: all 0.6s;    -o-transition: all 0.6s;    -ms-transition: all 0.6s;    -moz-transition: all 0.6s;    transition: all 0.6s;  outline: none;}
 .jb_heading_wraper h3 {font-size: 36px;    line-height: 42px;    text-transform: capitalize;    font-weight: 400;    margin-bottom: 0px;}
 .comments_form .form-control {    height: 50px;        padding: 15px 8px;    font-size: 16px;    border: 1px solid #e2e2e2;    -webkit-border-radius: 0;    -moz-border-radius: 0;    border-radius: 0;    box-shadow: none;    -webkit-transition: all 0.3s ease 0s;    -moz-transition: all 0.3s ease 0s;    -o-transition: all 0.3s ease 0s;    transition: all 0.3s ease 0s;    background-color: #fff;}
 .comments_form .form-group i {    position: absolute;    top: 17px;   right: 22px;   color: #ff8042;}
@@ -568,6 +562,12 @@ nav.navbar.navbar-expand-md.navbar-light.mobile-menu {    display: none;}
 .section-title h5 {    font-size: 42px;    margin-bottom: 15px;}
 .sec-title h4 {    font-size: 42px;    margin-bottom: 15px;}
 
+.slider-caption span{font-size: 50px; font-family: 'Oswald', sans-serif;   line-height: 1.1; margin-bottom: 20px;    font-weight: 900;}
+.slider-caption h1{font-size: 50px; font-family: 'Oswald', sans-serif;   line-height: 1.1; margin-bottom: 20px;    font-weight: 900;}
+.slider-caption p{     font-size: 25px;    line-height: 1.5;    font-weight: 700;    color: #ffffff;   margin-bottom: 34px;    }
+.slider-caption {    margin: 0px auto; top: 30%;}
+color.orange{color: #ff8042;}
+
 }
 @media  (min-width:769px) and (max-width:1440px)
 {
@@ -652,6 +652,14 @@ nav.navbar.navbar-expand-md.navbar-light.mobile-menu {    display: none;}
   font-size: 20px;
   line-height: 1.6;
 }
-.section-title h5 {    font-size: 24px;    margin-bottom: 15px;}
-.sec-title h4 {    font-size: 24px;    margin-bottom: 15px;}
+.section-title h5 
+{    font-size: 24px;    margin-bottom: 15px;}
+.sec-title h4
+ {    font-size: 24px;    margin-bottom: 15px;}
+ .slider-caption span{font-size: 30px; font-family: 'Oswald', sans-serif;   line-height: 1.1; margin-bottom: 20px;    font-weight: 900;}
+.slider-caption h1{font-size: 30px; font-family: 'Oswald', sans-serif;   line-height: 1.1; margin-bottom: 20px;    font-weight: 900;}
+.slider-caption p{     font-size: 25px;    line-height: 1.5;    font-weight: 700;    color: #ffffff;   margin-bottom: 34px;    }
+.slider-caption {    margin: 0px auto; top: 30%;}
+color.orange{color: #ff8042;}
+color
 }
