--- a/style.css
+++ b/style.css
@@ -568,6 +568,41 @@ nav.navbar.navbar-expand-md.navbar-light.mobile-menu {    display: none;}
 .slider-caption {    margin: 0px auto; top: 30%;}
 color.orange{color: #ff8042;}
 
+
+
+ .product-card {
+      border: none;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .product-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+    }
+    .card-title
+    {
+        font-size: 20px;
+    }
+    .product-img {
+      height: 220px;
+      object-fit: cover;
+    }
+    .btn-custom {
+      border-radius: 50px;
+      padding: 8px 20px;
+      background: linear-gradient(135deg, #ff7e5f, #feb47b);
+      color: #fff;
+      font-weight: 600;
+      border: none;
+      transition: 0.3s ease;
+    }
+    .btn-custom:hover {
+      background: linear-gradient(135deg, #feb47b, #ff7e5f);
+      color: #fff;
+      transform: scale(1.05);
+    }
 }
 @media  (min-width:769px) and (max-width:1440px)
 {
@@ -661,4 +696,36 @@ color.orange{color: #ff8042;}
 .slider-caption p{     font-size: 25px;    line-height: 1.5;    font-weight: 700;    color: #ffffff;   margin-bottom: 34px;    }
 .slider-caption {    margin: 0px auto; top: 30%;}
 color.orange{color: #ff8042;}
+
+
+
+ .product-card {
+      border: none;
+      border-radius: 20px;
+      overflow: hidden;
+      box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    .product-card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 12px 30px rgba(0, 0, 0, 0.2);
+    }
+    .product-img {
+      height: 220px;
+      object-fit: cover;
+    }
+    .btn-custom {
+      border-radius: 50px;
+      padding: 8px 10px;
+      background: linear-gradient(135deg, #ff7e5f, #feb47b);
+      color: #fff;
+      font-weight: 600;
+      border: none;
+      transition: 0.3s ease;
+    }
+    .btn-custom:hover {
+      background: linear-gradient(135deg, #feb47b, #ff7e5f);
+      color: #fff;
+      transform: scale(1.05);
+    }
 }
