--- a/style.css
+++ b/style.css
@@ -636,7 +636,7 @@ color.orange{color: #ff8042;}
     {
         transform: scale(1.05);
     }
-    .roduct-image img 
+    .product-image img 
     {
         width: 100%;
         height: auto;
