--- a/style.css
+++ b/style.css
@@ -669,6 +669,15 @@ color.orange{color: #ff8042;}
         width: fit-content;
         padding-left: 10px;
     }
+    .product-description h3
+    {
+        font-size: 24px;
+        border-radius: 10px 0 0 10px;
+        border-bottom:3px solid #ff8042;
+        border-left:3px solid #ff8042;
+        width: fit-content;
+        padding-left: 10px;
+    }
 }
 @media  (min-width:769px) and (max-width:1440px)
 {
@@ -815,6 +824,12 @@ color.orange{color: #ff8042;}
     .product-description h2
     {
         font-size: 24px;
+        border-radius: 10px;
+        border-left:2px solid #ff8042;
+    }
+    .product-description h3
+    {
+        font-size: 16px;
         border-radius: 10px;
         border-left:2px solid #ff8042;
     }
